Reduce portfolio marquee text size and fix spinner alignment
- Scale down text from 120px to 80px for better fit on smaller desktops
- Shrink spinning circle from 80px to 60px proportionally
- Center spinner vertically with text using inline-flex alignment
- Tighten spacing between marquee items

--- a/public/assets/scss/layout/pages/_project.scss
+++ b/public/assets/scss/layout/pages/_project.scss
@@ -45,34 +45,46 @@
         }
         & span {
             font-weight: 400;
-            font-size: 120px;
+            font-size: 80px;
             line-height: 1;
             text-transform: uppercase;
             color: var(--tp-common-black);
+            display: inline-flex;
+            align-items: center;
+            vertical-align: middle;
             @media #{$md}{
-                font-size: 90px;
+                font-size: 60px;
             }
             @media #{$xs}{
-                font-size: 50px;
+                font-size: 36px;
             }
             & img {
-                margin: 0 30px;
+                margin: 0 20px;
                 animation: rotate2 15s linear infinite;
-                width: 80px;
-                height: 80px;
+                width: 60px;
+                height: 60px;
+                @media #{$md}{
+                    width: 45px;
+                    height: 45px;
+                }
+                @media #{$xs}{
+                    width: 30px;
+                    height: 30px;
+                    margin: 0 10px;
+                }
             }
 
             &.textline-1 {
-                margin-right: 50px;
+                margin-right: 30px;
                 flex: 0 0 auto;
                 font-family: var(--tp-ff-gallery);
                 @media #{$xs}{
-                    margin-right: 20px;
+                    margin-right: 15px;
                 }
             }
 
             &.textline-2 {
-                margin-right: 50px;
+                margin-right: 30px;
             }
         }
     }
