--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -267,12 +267,12 @@ a:hover {
 
 /* Project textline badge spacing */
 .tp-project-textline span img {
-  margin: 0 10px !important;
+  margin: 0 20px !important;
   vertical-align: middle !important;
 }
 .tp-project-textline span.textline-1,
 .tp-project-textline span.textline-2 {
-  margin-right: 20px !important;
+  margin-right: 30px !important;
   display: inline-flex !important;
   align-items: center !important;
 }
